# sphinx_inv

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  committed.toml  justfile  taplo.toml
.cargo/: config.toml
.github/: codecov.yml  pull_request_template.md
.github/workflows/: check.yml  release-plz.yml  test.yml
benches/: numpy.rs  parsing_only.rs
src/: error.rs  inv_file.rs  lib.rs  types.rs  winnow.rs
tests/: main.rs
tests/sphinx_objects/: .gitattributes  giant.txt  numpy.inv
